# sde-tech-test

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NOTES.md  README.md  docker-compose.yaml  entrypoint.sh  fabfile.py  pyproject.toml  requirements.txt
src/: run.py
src/analytics/models/core/: core_bets.sql  core_users.sql  schema.yml
src/analytics/models/reporting/: daily_user_metrics.sql  weekly_game_popularity.sql
src/analytics/models/sources/: schema.yml
src/midnite_pipeline/: README.md  assets.py  constants.py  definitions.py  resources.py
src/midnite_pipeline/.dagster/.telemetry/: id.yaml
src/midnite_pipeline/.dagster/history/: runs.db
src/midnite_pipeline/.dagster/history/runs/: index.db
src/midnite_pipeline/.dagster/schedules/: schedules.db
src/midnite_pipeline/jobs/: insert_jobs.py
src/midnite_pipeline/ops/: insert_ops.py  run_dbt.py  validation.py
src/midnite_pipeline/sensors/: file_sensor.py
tests/: conftest.py  test_validation.py
