[project]
name = "senior-data-engineer-technical-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jitse-Jan", email = "jj.vanwaterschoot@validis.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/senior_data_engineer_technical_test"]
