[project]
name = "senior-data-engineer-technical-test"
version = "0.1.0"
description = "Senior DE technical test"
authors = [
    { name = "Jitse-Jan", email = "jitsejan@protonmail.com" }
]
dependencies = [
    "dagster-webserver>=1.10.7",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "fabric>=3.2.2",
    "pre-commit>=4.2.0",
    "dagster-dbt>=0.26.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/senior_data_engineer_technical_test"]

[tool.pytest.ini_options]
pythonpath = ["src"]